--- a/TramUrWay.Android/Resources/layout/HomeActivity.xml
+++ b/TramUrWay.Android/Resources/layout/HomeActivity.xml
@@ -29,12 +29,24 @@
                 android:layout_height="wrap_content" />
 
         </android.support.design.widget.AppBarLayout>
-        
-        <android.support.v4.view.ViewPager
-            android:id="@+id/MainActivity_ViewPager"
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            
+            <android.support.v4.view.ViewPager
+                android:id="@+id/MainActivity_ViewPager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <View
+                android:id="@+id/shadow"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:background="@drawable/shadow" />
+            
+        </RelativeLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 
