--- a/TramUrWay.Android/Resources/layout/LineActivity.xml
+++ b/TramUrWay.Android/Resources/layout/LineActivity.xml
@@ -32,12 +32,24 @@
             
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/LineActivity_ViewPager"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+            <android.support.v4.view.ViewPager
+                android:id="@+id/LineActivity_ViewPager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <View
+                android:id="@+id/shadow"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:background="@drawable/shadow" />
+
+        </RelativeLayout>
+        
     </android.support.design.widget.CoordinatorLayout>
 
 </android.support.v4.widget.DrawerLayout>
