--- a/TramUrWay.Android/Resources/layout/StopActivity.xml
+++ b/TramUrWay.Android/Resources/layout/StopActivity.xml
@@ -26,65 +26,77 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/StopActivity_SwipeRefresh"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <ScrollView
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/StopActivity_SwipeRefresh"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <LinearLayout
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/StopActivity_LineLabel"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:textSize="@dimen/abc_text_size_body_2_material"
-                        android:paddingStart="16dp"
-                        android:paddingLeft="16dp"
-                        android:height="48dp"
-                        android:gravity="center_vertical"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorAccent" />
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/StopActivity_LineLabel"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text=""
+                            android:textSize="@dimen/abc_text_size_body_2_material"
+                            android:paddingStart="16dp"
+                            android:paddingLeft="16dp"
+                            android:height="48dp"
+                            android:gravity="center_vertical"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorAccent" />
                     
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/StopActivity_LineStopList"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:overScrollMode="never" />
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/StopActivity_LineStopList"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:overScrollMode="never" />
 
-                    <TextView
-                        android:id="@+id/StopActivity_OtherLabel"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Correspondances"
-                        android:textSize="@dimen/abc_text_size_body_2_material"
-                        android:paddingStart="16dp"
-                        android:paddingLeft="16dp"
-                        android:height="48dp"
-                        android:gravity="center_vertical"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorAccent" />
+                        <TextView
+                            android:id="@+id/StopActivity_OtherLabel"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Correspondances"
+                            android:textSize="@dimen/abc_text_size_body_2_material"
+                            android:paddingStart="16dp"
+                            android:paddingLeft="16dp"
+                            android:height="48dp"
+                            android:gravity="center_vertical"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorAccent" />
                     
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/StopActivity_OtherStopList"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:overScrollMode="never" />
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/StopActivity_OtherStopList"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:overScrollMode="never" />
 
-                </LinearLayout>
+                    </LinearLayout>
 
-            </ScrollView>
+                </ScrollView>
             
-        </android.support.v4.widget.SwipeRefreshLayout>
+            </android.support.v4.widget.SwipeRefreshLayout>
 
+            <View
+                android:id="@+id/shadow"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:background="@drawable/shadow" />
+
+        </RelativeLayout>
+            
     </android.support.design.widget.CoordinatorLayout>
 
 </android.support.v4.widget.DrawerLayout>
