--- a/TramUrWay.Android/Resources/layout/RoutesActivity.xml
+++ b/TramUrWay.Android/Resources/layout/RoutesActivity.xml
@@ -58,18 +58,25 @@
 
                     </android.support.design.widget.TextInputLayout>
 
-                    <ImageButton
+                    <RelativeLayout
                         android:id="@+id/RoutesActivity_FromButton"
                         android:layout_width="48dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_alignTop="@+id/RoutesActivity_FromLayout"
                         android:layout_alignBottom="@+id/RoutesActivity_FromLayout"
-                        android:src="@drawable/ic_place"
-                        android:tint="@color/primary_text_default_material_dark"
                         android:focusable="true"
                         android:clickable="true"
-                        android:background="?android:attr/selectableItemBackground" />
+                        android:background="?android:attr/selectableItemBackground">
+
+                        <ImageView
+                            android:layout_width="36dp"
+                            android:layout_height="36dp"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/ic_place"
+                            android:tint="@color/primary_text_default_material_dark" />
+                        
+                    </RelativeLayout>
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/RoutesActivity_ToLayout"
@@ -91,19 +98,26 @@
 
                     </android.support.design.widget.TextInputLayout>
 
-                    <ImageButton
+                    <RelativeLayout
                         android:id="@+id/RoutesActivity_ToButton"
                         android:layout_width="48dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_alignTop="@+id/RoutesActivity_ToLayout"
                         android:layout_alignBottom="@+id/RoutesActivity_ToLayout"
-                        android:src="@drawable/ic_place"
-                        android:tint="@color/primary_text_default_material_dark"
                         android:focusable="true"
                         android:clickable="true"
-                        android:background="?android:attr/selectableItemBackground" />
+                        android:background="?android:attr/selectableItemBackground">
+                        
+                        <ImageView
+                            android:layout_width="36dp"
+                            android:layout_height="36dp"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/ic_place"
+                            android:tint="@color/primary_text_default_material_dark" />
 
+                    </RelativeLayout>
+                    
                     <RelativeLayout
                         android:id="@+id/RoutesActivity_DateLayout"
                         android:layout_width="match_parent"
